--- a/index.html
+++ b/index.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Melih</title>
 </head>
+
 <body>
-    <h1> Hello World </h1>
+    <header class="header">
+        <a href="" class="logo">Melih.</a>
+
+        <nav class="navbar">
+            <a href="#" style="--i:1" class="active">Home</a>
+            <a href="#" style="--i:2">About</a>
+            <a href="#" style="--i:3">Projects</a>
+            <a href="#" style="--i:4">Contact</a>
+        </nav>
+    </header>
+
+    <section class="home">
+        <div class="home-content">
+            <h3>Hello, It's</h3>
+            <h1>Melih</h1>
+            <h3>And I'm a <span class="multiple-text"></span> Developer</h3>
+            <p>I'm an 18 year old Istanbul born developer which codes since 2 years.</p>
+            <div class="social-media">
+                <a href="http://twitter.com/melihhdev" style="--i:7">
+                    <i class="bx bxl-twitter"></i>
+                </a>
+                <a href="http://github.com/melih-cokan" style="--i:8">
+                    <i class='bx bxl-github'></i>
+                </a>
+                <a href="#" style=" --i:9">
+                    <i class='bx bxl-linkedin'></i>
+                </a>
+            </div>
+            <a href="#" class="btn">Download CV</a>
+
+        </div>
+
+        <div class="home-image">
+            <img src="assets/background.png" alt="">
+        </div>
+    </section>
+
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
