--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="tetris.js"></script>
-    <title>Melih</title>
+    <title>Melih the developer.</title>
 </head>
 
 <body>
@@ -29,27 +29,26 @@
             <h3>Hello, It's</h3>
             <h1>Melih</h1>
             <h3>And I'm a <span class="multiple-text"></span> Developer</h3>
-            <p>I'm an 18 year old Istanbul born developer who's codding for 2 years.</p>
+            <p>I'm a developer with 2 years of experience.</p>
             <div class="social-media">
-                <a href="http://twitter.com/melihhdev" style="--i:7">
+                <a target="_blank" href="http://twitter.com/melih_io" style="--i:7">
                     <i class="bx bxl-twitter"></i>
                 </a>
-                <a href="http://github.com/melih-cokan" style="--i:8">
+                <a target="_blank" href="http://github.com/melih-cokan" style="--i:8">
                     <i class='bx bxl-github'></i>
                 </a>
-                <a href="#" style=" --i:9">
+                <a target="_blank" href="#" style=" --i:9">
                     <i class='bx bxl-linkedin'></i>
                 </a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <!-- <a href="#" class="btn">Download CV</a> -->
         </div>
-        <div class="image-content">
+        <!-- <div class="image-content">
             <img src="assets/background.png" alt="">
-        </div>
+        </div> -->
     </section>
 
     <section class="tetris">
-        
         <h1><span class="tetris-text"></span></h1>
         <canvas id='my-canvas'></canvas>
     </section>
